// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component should render properly with flat variant and primary color 1`] = `
.c1 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c0 {
  background-color: transparent;
  border: none;
  padding: 10px;
  border-radius: 3px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #012040;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

<div>
  <button
    class="c0"
    color="primary"
  >
    <span
      class="c1"
    >
      Flat Button
    </span>
  </button>
</div>
`;

exports[`Button component should render properly with outlined variant and secondary color 1`] = `
.c1 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c0 {
  background-color: transparent;
  border: none;
  padding: 10px;
  border-radius: 3px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: 1px solid #FA6F80;
  color: #FA6F80;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

<div>
  <button
    class="c0"
    color="secondary"
  >
    <span
      class="c1"
    >
      Outlined Button
    </span>
  </button>
</div>
`;

exports[`Button component should render properly with solid variant 1`] = `
.c1 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c0 {
  background-color: transparent;
  border: none;
  padding: 10px;
  border-radius: 3px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #012040;
  color: #ffffff;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

<div>
  <button
    class="c0"
    color="primary"
  >
    <span
      class="c1"
    >
      Solid Button
    </span>
  </button>
</div>
`;

exports[`Button component should wrap children into Text component when rendering string or number 1`] = `
.c1 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c0 {
  background-color: transparent;
  border: none;
  padding: 10px;
  border-radius: 3px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #012040;
  color: #ffffff;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

<div>
  <button
    class="c0"
    color="primary"
  >
    <span
      class="c1"
    >
      Some text
    </span>
    <i>
      some icon
    </i>
    <div>
      element2
    </div>
  </button>
</div>
`;
